--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,7 +14,7 @@ flpTitle=Visualizar/Manter Veículo
 
 txtCreateComp=Criar Veículo
 txtDeleteComp=Eliminar Veículo
-titleGeneralDataGroup=Dados Gerais
+titleGeneralDataGroup=Detalhes do Veículo
 titleDetailsDisplay=Exibir Veículo
 titleDetailsEdit=Modif. Veículo
 saveBtn=Gravar
