--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -21,3 +21,5 @@ saveBtn=Gravar
 titleTUAttributes=Atributos do Veículo
 titleInfoGroup=Informações Diversas
 titleDetails=Detalhes
+Vehicle=Veículo
+TUs=Unidades de Transporte
