--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,8 +15,8 @@ flpTitle=Visualizar/Manter Veículo
 txtCreateComp=Criar Veículo
 txtDeleteComp=Eliminar Veículo
 titleGeneralDataGroup=Detalhes do Veículo
-titleDetailsDisplay=Exibir Veículo
-titleDetailsEdit=Modif. Veículo
+titleDetailsDisplay=Exibir Veículo {0}
+titleDetailsEdit=Modif. Veículo {0}
 saveBtn=Gravar
 titleTUAttributes=Atributos do Veículo
 titleInfoGroup=Informações Diversas
