--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,3 +23,5 @@ titleInfoGroup=Informações Diversas
 titleDetails=Detalhes
 Vehicle=Veículo
 TUs=Unidades de Transporte
+txtDescription=Descrição
+txtTU=Unid. Transporte
