--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,14 +3,14 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Visualizar/Manter Veículo
+appTitle=Criar/Visualizar Veículos
 
 #YDES: Application description
-appDescription=Visualizar/Manter Veículo
+appDescription=Criar/Visualizar Veículos
 #XTIT: Main view title
-title=Visualizar/Manter Veículo
+title=Veículos
 
-flpTitle=Visualizar/Manter Veículo
+flpTitle=Criar/Visualizar Veículos
 
 txtCreateComp=Criar Veículo
 txtDeleteComp=Eliminar Veículo
